reset to default

--- a/OpenSim.ini
+++ b/OpenSim.ini
@@ -391,10 +391,6 @@
     ;; Allow region managers to assume god powers in regions they manage
     ; region_manager_is_god = false
 
-    ;# {parcel_owner_is_god} {} {Allow parcel owner gods} {true false} false
-    ;; Allow parcel owners to assume god powers in their parcels
-    ; parcel_owner_is_god = false
-
     ;# {simple_build_permissions} {} {Allow building in parcel by access list (no groups)} {true false} false
     ;; More control over permissions
     ;; This is definitely not SL!
@@ -413,11 +409,11 @@
 
     ;# {DefaultEstateName} {} {Default name for estate?} {} My Estate
     ;; Name for the default estate
-    DefaultEstateName = My Estate
+    ; DefaultEstateName = My Estate
 
     ;# {DefaultEstateOwnerName} {} {Default estate owner name?} {} FirstName LastName
     ;; Name for default estate owner
-    DefaultEstateOwnerName = Test User
+    ; DefaultEstateOwnerName = FirstName LastName
 
 
     ; ** Standalone Estate Settings **
@@ -427,15 +423,15 @@
     ;# {DefaultEstateOwnerUUID} {} {Default estate owner UUID?} {} 00000000-0000-0000-0000-000000000000
     ;; If DefaultEstateOwnerUUID is left at UUID.Zero (as below) then a random 
     ;; UUID will be assigned. This is normally what you want 
-    DefaultEstateOwnerUUID = 00000000-0000-0000-0000-000000000000
+    ; DefaultEstateOwnerUUID = 00000000-0000-0000-0000-000000000000
 
     ;# {DefaultEstateOwnerEMail} {} {Default estate owner email?} {}
     ;; Email address for the default estate owner
-    DefaultEstateOwnerEMail = owner@domain.com
+    ; DefaultEstateOwnerEMail = owner@domain.com
 
     ;# {DefaultEstateOwnerPassword} {} {Default estate owner password} {}
     ;; Password for the default estate owner
-    DefaultEstateOwnerPassword = password
+    ; DefaultEstateOwnerPassword = password
 
 
 [SMTP]
@@ -696,12 +692,6 @@
     ;; then you might want to try setting this to false.
     ; mesh_sculpted_prim = true
 
-    ;# {use_NINJA_physics_joints} {[Startup]physics:OpenDynamicsEngine} {Use jointed (NINJA) physics?} {true false} false
-    ;; If you would like physics joints to be enabled through a special naming
-    ;; convention in the client, set this to true.
-    ;; (see NINJA Physics, http://opensimulator.org/wiki/NINJA_Physics)
-    ; use_NINJA_physics_joints = false
-
 [RemoteAdmin]
     ;; This is the remote admin module, which uses XMLRPC requests to
     ;; manage regions from a web interface.
@@ -894,7 +884,7 @@
     ;; The trade-off may be increased memory usage by the script engine.
     ; ThreadStackSize = 262144
 
-    ;; Set this to true (the default) to load each script into a separate
+    ;; Set this to true to load each script into a separate
     ;; AppDomain. 
     ;;
     ;; Setting this to false will load all script assemblies into the
@@ -903,8 +893,10 @@
     ;;
     ;; However, setting this to false will also prevent script DLLs from being unloaded from memory if the script is deleted.
     ;; This may cause an OutOfMemory problem over time when avatars with scripted attachments move in and out of the region.
-    ;; Some Windows users have also reported script loading problems when AppDomainLoading = false
-    ; AppDomainLoading = true
+    ;; at this time some mono versions seem to have problems with the true option
+    ;; so default is now false until a fix is found, to simply life of less technical skilled users.
+    ;; this should only be a issue if regions stay alive for a long time with lots of scripts added or edited.
+    ; AppDomainLoading = false
 
     ;; Controls whether scripts are stopped by aborting their threads externally (abort) or by co-operative checks from the compiled script (co-op) 
     ;; co-op will be more stable but this option is currently experimental.
@@ -921,8 +913,15 @@
     ;; then startup will be considerably faster since scripts won't need to be recompiled. However, then it becomes your responsibility to delete the
     ;; compiled scripts if you're recompiling OpenSim from source code and internal interfaces used
     ;; by scripts have changed.
-    DeleteScriptsOnStartup = false
+    ; DeleteScriptsOnStartup = true
 
+    ;# {CompactMemOnLoad} {} {compacts memory on each script load at startup?} {true false} false
+    ;; forces calls to memory garbage collector before loading each script DLL during region startup.
+    ;; Peak memory usage is reduced and region starts with a more compacted memory allocation.
+    ;; But this costs a lot of time, so region load will take a lot longer.
+    ;; it is more usefull if there are no previously compiled scripts DLLs (as with DeleteScriptsOnStartup = true)
+    ;CompactMemOnLoad = false
+    
     ;# {DefaultCompileLanguage} {Enabled:true} {Default script language?} {lsl vb cs} lsl
     ;; Default language for scripts
     ; DefaultCompileLanguage = "lsl"
@@ -1129,17 +1128,21 @@
 	
 	;; several options to control NPCs creation
 	
+    ;# {AllowNotOwned} {} {allow NPCs to be created not Owned} {true false} true
 	;; allow NPCs to be created not Owned {true false} default: true
-    ; AllowNotOwned = false
+    ; AllowNotOwned = true
 	
+    ;# {AllowSenseAsAvatar} {} {allow NPCs to set to be sensed as Avatars} {true false} true
 	;; allow NPCs to set to be sensed as Avatars {true false} default: true
-    ; AllowSenseAsAvatar = false
+    ; AllowSenseAsAvatar = true
 	
+    ;# {AllowCloneOtherAvatars} {} {allow NPCs to created cloning any avatar in region} {true false} true
 	;; allow NPCs to created cloning any avatar in region {true false} default: true
-    ; AllowCloneOtherAvatars = false
+    ; AllowCloneOtherAvatars = true
 	
+    ;# {NoNPCGroup} {} {if true NPCs will have no group title, if false display "- NPC -"} {true false} true
 	;; if true NPCs will have no group title, if false display "- NPC -" for easy identification {true false} default: true
-    ; NoNPCGroup = false 
+    ; NoNPCGroup = true 
 
 
 [Terrain]
@@ -1155,6 +1158,11 @@
   ;; Set the value of the url to your UserProfilesService
   ;; If un-set / "" the module is disabled
   ;; ProfileServiceURL = ${Const|BaseURL}:${Const|PublicPort}
+  
+  ;# {AllowUserProfileWebURLs} {} {allow user profiles web urls} {true false} true
+  ;; set this to false to prevent your users to be sent to unknown
+  ;; web sites by other users on their profiles
+  ; AllowUserProfileWebURLs = true
 
 [XBakes]
   ;# {URL} {} {Set URL for Baked texture service} {}
@@ -1183,7 +1191,7 @@
     ;; "config-include/StandaloneCommon.ini.example" to "config-include/StandaloneCommon.ini" before
     ;; editing it to set the database and backend services that OpenSim will use.
     ;;
-    Include-Architecture = "config-include/Standalone.ini"
+    ; Include-Architecture = "config-include/Standalone.ini"
     ; Include-Architecture = "config-include/StandaloneHypergrid.ini"
     ; Include-Architecture = "config-include/Grid.ini"
     ; Include-Architecture = "config-include/GridHypergrid.ini"
