--- a/OpenSim.ini
+++ b/OpenSim.ini
@@ -409,12 +409,11 @@
 
     ;# {DefaultEstateName} {} {Default name for estate?} {} My Estate
     ;; Name for the default estate
-    ; DefaultEstateName = My Estate
+    DefaultEstateName = My Estate
 
     ;# {DefaultEstateOwnerName} {} {Default estate owner name?} {} FirstName LastName
     ;; Name for default estate owner
-    ; DefaultEstateOwnerName = FirstName LastName
-
+    DefaultEstateOwnerName = Test User
 
     ; ** Standalone Estate Settings **
     ; The following parameters will only be used on a standalone system to 
@@ -423,15 +422,15 @@
     ;# {DefaultEstateOwnerUUID} {} {Default estate owner UUID?} {} 00000000-0000-0000-0000-000000000000
     ;; If DefaultEstateOwnerUUID is left at UUID.Zero (as below) then a random 
     ;; UUID will be assigned. This is normally what you want 
-    ; DefaultEstateOwnerUUID = 00000000-0000-0000-0000-000000000000
+    DefaultEstateOwnerUUID = 00000000-0000-0000-0000-000000000000
 
     ;# {DefaultEstateOwnerEMail} {} {Default estate owner email?} {}
     ;; Email address for the default estate owner
-    ; DefaultEstateOwnerEMail = owner@domain.com
+    DefaultEstateOwnerEMail = owner@domain.com
 
     ;# {DefaultEstateOwnerPassword} {} {Default estate owner password} {}
     ;; Password for the default estate owner
-    ; DefaultEstateOwnerPassword = password
+    DefaultEstateOwnerPassword = xyzzy123
 
 
 [SMTP]
@@ -913,7 +912,7 @@
     ;; then startup will be considerably faster since scripts won't need to be recompiled. However, then it becomes your responsibility to delete the
     ;; compiled scripts if you're recompiling OpenSim from source code and internal interfaces used
     ;; by scripts have changed.
-    ; DeleteScriptsOnStartup = true
+    DeleteScriptsOnStartup = true
 
     ;# {CompactMemOnLoad} {} {compacts memory on each script load at startup?} {true false} false
     ;; forces calls to memory garbage collector before loading each script DLL during region startup.
@@ -1191,7 +1190,7 @@
     ;; "config-include/StandaloneCommon.ini.example" to "config-include/StandaloneCommon.ini" before
     ;; editing it to set the database and backend services that OpenSim will use.
     ;;
-    ; Include-Architecture = "config-include/Standalone.ini"
+    Include-Architecture = "config-include/Standalone.ini"
     ; Include-Architecture = "config-include/StandaloneHypergrid.ini"
     ; Include-Architecture = "config-include/Grid.ini"
     ; Include-Architecture = "config-include/GridHypergrid.ini"
