initial RPI changes

--- a/OpenSim.ini
+++ b/OpenSim.ini
@@ -248,7 +248,7 @@
     ;; Default is BulletSim
     ; physics = OpenDynamicsEngine
     ; physics = BulletSim
-    ; physics = basicphysics
+    physics = basicphysics
     ; physics = POS
 	;; alternative OpenDynamicsEngine engine. ubODEMeshmerizer meshing above MUST be selected also
 	; physics = ubODE
