--- a/OpenMetaverse.dll.config
+++ b/OpenMetaverse.dll.config
@@ -1,4 +1,4 @@
 <configuration>
-    <dllmap dll="openjpeg-dotnet.dll" target="bin/lib/libopenjpeg.so" />
-    <dllmap dll="openjpeg-dotnet-x86_64.dll" target="bin/lib/libopenjpeg.so" />
+    <dllmap dll="openjpeg-dotnet.dll" target="libopenjpeg-dotnet-2-1.5.0-dotnet-1-aarch64.so" />
+    <dllmap dll="openjpeg-dotnet-x86_64.dll" target="libopenjpeg-dotnet-2-1.5.0-dotnet-1-aarch64.so" />
 </configuration>
