--- a/Dockerfile.old
+++ b/Dockerfile.old
@@ -10,6 +10,9 @@ RUN tar xzf opensim-0.9.1.1.tar.gz && rm -f opensim-0.9.1.1.tar.gz
 COPY Regions.ini /opensim-0.9.1.1/bin/Regions/Regions.ini
 COPY OpenSim.ini /opensim-0.9.1.1/bin/OpenSim.ini
 COPY SQLiteStandalone.ini /opensim-0.9.1.1/bin/config-include/storage/SQLiteStandalone.ini
+COPY libopenjpeg-dotnet-2-1.5.0-dotnet-1-aarch64.so /opensim-0.9.1.1/bin/libopenjpeg-dotnet-2-1.5.0-dotnet-1-aarch64.so
+COPY OpenMetaverse.dll.config /opensim-0.9.1.1/bin/OpenMetaverse.dll.config
+
 RUN mkdir /var/opensim
 EXPOSE 9000/tcp
 EXPOSE 9000/udp
