--- a/OpenSim.ini
+++ b/OpenSim.ini
@@ -53,13 +53,13 @@
     ; in the configuration for a standalone.
 
     ;# {BaseURL} {} {BaseURL} {"http://example.com" "http://127.0.0.1"} "http://127.0.0.1"
-    BaseURL = http://127.0.0.1
+    BaseURL = http://billg-rpiu.local
     
     ;# {PublicPort} {} {PublicPort} {8002 9000} "8002"
-    PublicPort = "8002"
+    PublicPort = "9000"
 
     ;# {PrivatePort} {} {PrivatePort} {8003} "8003"
-    PrivatePort = "8003"
+    PrivatePort = "9000"
 
 
 [Startup]
