--- a/OpenSim.ini
+++ b/OpenSim.ini
@@ -246,9 +246,9 @@
     ;; It continues to provide a workable physics implementation.  It does not currently support varregions.
     ;; basicphysics effectively does not model physics at all, making all objects phantom.   
     ;; Default is BulletSim
-    ; physics = OpenDynamicsEngine
+    physics = OpenDynamicsEngine
     ; physics = BulletSim
-    physics = basicphysics
+    ; physics = basicphysics
     ; physics = POS
 	;; alternative OpenDynamicsEngine engine. ubODEMeshmerizer meshing above MUST be selected also
 	; physics = ubODE
