work on raspian (armv7l) 32bit version

--- a/OpenSim.ini
+++ b/OpenSim.ini
@@ -53,7 +53,7 @@
     ; in the configuration for a standalone.
 
     ;# {BaseURL} {} {BaseURL} {"http://example.com" "http://127.0.0.1"} "http://127.0.0.1"
-    BaseURL = http://billg-rpiu.local
+    BaseURL = http://billg-rpi4.local
     
     ;# {PublicPort} {} {PublicPort} {8002 9000} "8002"
     PublicPort = "9000"
@@ -246,9 +246,9 @@
     ;; It continues to provide a workable physics implementation.  It does not currently support varregions.
     ;; basicphysics effectively does not model physics at all, making all objects phantom.   
     ;; Default is BulletSim
-    physics = OpenDynamicsEngine
+    ; physics = OpenDynamicsEngine
     ; physics = BulletSim
-    ; physics = basicphysics
+    physics = basicphysics
     ; physics = POS
 	;; alternative OpenDynamicsEngine engine. ubODEMeshmerizer meshing above MUST be selected also
 	; physics = ubODE
