--- a/OpenSim.Region.PhysicsModule.Ode.dll.config
+++ b/OpenSim.Region.PhysicsModule.Ode.dll.config
@@ -8,4 +8,5 @@
   <dllmap os="!windows,osx" cpu="ppc64" dll="ode" target="lib64/libode-ppc64" />
   <dllmap os="!windows,osx" cpu="s390x" dll="ode" target="lib64/libode-s390x" />
   <dllmap os="!windows,osx" cpu="armv8" dll="ode" target="libode.so.4.1.0" />
+  <dllmap os="!windows,osx" cpu="arm" dll="ode" target="libode-arm7.so.4.1.0" />
 </configuration>
