--- a/OpenSim.ini
+++ b/OpenSim.ini
@@ -53,7 +53,7 @@
     ; in the configuration for a standalone.
 
     ;# {BaseURL} {} {BaseURL} {"http://example.com" "http://127.0.0.1"} "http://127.0.0.1"
-    BaseURL = http://billg-rpiu.local
+    BaseURL = http://localhost
     
     ;# {PublicPort} {} {PublicPort} {8002 9000} "8002"
     PublicPort = "9000"
