--- a/Regions.ini
+++ b/Regions.ini
@@ -7,5 +7,5 @@ SizeZ = 256
 InternalAddress = 0.0.0.0
 InternalPort = 9000
 AllowAlternatePorts = False
-ExternalHostName = billg-rpiu.local
+ExternalHostName = localhost
 MaptileStaticUUID = 00000000-0000-0000-0000-000000000000
