--- a/Dockerfile.new
+++ b/Dockerfile.new
@@ -1,6 +1,9 @@
 # FROM mono
 FROM ubuntu:20.04
 
+ARG VERSION_TAG=opensim-0.9.1.1
+ARG TARGET_DIR=/opt
+
 #to fix problem with /etc/localtime
 ENV TZ America/New_York
 ENV DEBIAN_FRONTEND noninteractive
@@ -8,26 +11,42 @@ ENV DEBIAN_FRONTEND noninteractive
 #Add repository and update the container
 #Installation of necessary package/software for this containers...
 #nant was remove and added mono build dependence
-RUN apt-get update && apt-get upgrade -y && apt-get install -y gnupg
+RUN apt-get update && apt-get upgrade -y && apt-get install tzdata gnupg -y
 RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF \
    && echo "deb http://download.mono-project.com/repo/ubuntu focal main" | tee /etc/apt/sources.list.d/mono-official.list
-RUN echo $TZ > /etc/timezone && apt-get update && apt-get install -y -q curl screen mono-complete ca-certificates-mono tzdata \
+RUN echo $TZ > /etc/timezone \
    && rm /etc/localtime  \
    && ln -snf /usr/share/zoneinfo/$TZ /etc/localtime \
    && dpkg-reconfigure -f noninteractive tzdata \
-   && apt-get install x11-apps vim -y
+   && apt-get install x11-apps vim inetutils-ping net-tools -y
    # && rm -rf /tmp/* /var/tmp/*  \
    # && apt-get clean \
    # && rm -rf /var/lib/apt/lists/*
  
-RUN apt-get install -y -q curl screen mono-complete ca-certificates-mono
-RUN curl http://dist.opensimulator.org/opensim-0.9.1.1.tar.gz -s | tar xzf -
-COPY Regions.ini /opensim-0.9.1.1/bin/Regions/Regions.ini
-COPY OpenSim.ini /opensim-0.9.1.1/bin/OpenSim.ini
-COPY SQLiteStandalone.ini /opensim-0.9.1.1/bin/config-include/storage/SQLiteStandalone.ini
-RUN mkdir /var/opensim
+RUN apt-get install -y -q mono-complete ca-certificates-mono
+
+# =====
+# ADD also extracts
+ADD ${VERSION_TAG}.tar.gz ${TARGET_DIR}
+RUN rm -f /opt/opensim; ln -s ${TARGET_DIR}/${VERSION_TAG} /opt/opensim
+
+WORKDIR /opt/opensim/bin
+COPY Regions.ini Regions/
+COPY OpenSim.ini .
+COPY StandaloneCommon.ini config-include/
+COPY SQLiteStandalone.ini config-include/storage/
+
+# RPI patches
+COPY libopenjpeg-dotnet-2-1.5.0-dotnet-1-armv7l.so .
+COPY libopenjpeg-dotnet-2-1.5.0-dotnet-1-aarch64.so .
+COPY libode-arm7.so.4.1.0 .
+COPY libode.so.4.1.0 .
+COPY OpenMetaverse.dll.config .
+COPY OpenSim.Region.PhysicsModule.Ode.dll.config .
+
+RUN mkdir -p /var/opensim
 EXPOSE 9000/tcp
 EXPOSE 9000/udp
-WORKDIR /opensim-0.9.1.1/bin
 
 CMD [ "mono",  "./OpenSim.exe" ]
+
