--- a/StandaloneCommon.ini
+++ b/StandaloneCommon.ini
@@ -213,10 +213,10 @@
     login = ${Const|BaseURL}:${Const|PublicPort}/
 
     ; long grid name: the long name of your grid
-    gridname = "Billgs Test Grid"
+    gridname = "localhost"
 
     ; short grid name: the short name of your grid
-    gridnick = "billggrid"
+    gridnick = "localhost"
 
     ; login page: optional: if it exists it will be used to tell the client to use
     ; this as splash page. May also be served from an external web server, e.g. for
