--- a/OpenSim.Region.PhysicsModule.Ode.dll.config
+++ b/OpenSim.Region.PhysicsModule.Ode.dll.config
@@ -1,12 +1,9 @@
 <configuration>
-</configuration>
-
-<configuration>
   <dllmap os="osx" dll="ode" target="lib64/libode.dylib" />
   <dllmap os="!windows,osx" cpu="x86-64,ia64" dll="ode" target="lib64/libode-x86_64" />
   <dllmap os="!windows,osx" cpu="x86" dll="ode" target="lib32/libode" />
   <dllmap os="!windows,osx" cpu="ppc64" dll="ode" target="lib64/libode-ppc64" />
   <dllmap os="!windows,osx" cpu="s390x" dll="ode" target="lib64/libode-s390x" />
-  <dllmap os="!windows,osx" cpu="armv8" dll="ode" target="libode.so.4.1.0" />
+  <dllmap os="!windows,osx" cpu="armv8" dll="ode" target="libode-aarch64.so.4.1.0" />
   <dllmap os="!windows,osx" cpu="arm" dll="ode" target="libode-arm7.so.4.1.0" />
 </configuration>
