bring master up to date

--- a/OpenSim.ini
+++ b/OpenSim.ini
@@ -56,10 +56,10 @@
     BaseURL = http://127.0.0.1
     
     ;# {PublicPort} {} {PublicPort} {8002 9000} "8002"
-    PublicPort = "8002"
+    PublicPort = "9000"
 
     ;# {PrivatePort} {} {PrivatePort} {8003} "8003"
-    PrivatePort = "8003"
+    # PrivatePort = "8003"
 
 
 [Startup]
